# metal-doddle

./: Cargo.toml  LICENSE  README.md  build.rs
.github/workflows/: coverage.yml  rust.yml
src/: boards.rs  dictionary.rs  factory.rs  guess.rs  main.rs  reporting.rs  scoring.rs  solver.rs  word.rs
