[package]
name = "metal-doddle"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde_json = "1.0"
float-cmp = "0.9.0"
itertools = "0.10.5"
colored = "2"
radix_fmt = "1.0.0"
clap = { version = "4.0.27", features = ["derive"] }

[dev-dependencies]
rstest = "0.16"

[build-dependencies]
copy_to_output = "2.0"
